@@ -256,47 +256,30 @@ void FMenuBar::onMouseUp (FMouseEvent* ev)
         x1 = (*iter)->getX();
         x2 = (*iter)->getX() + (*iter)->getWidth();
 
-        if ( mouse_y == 1 )
+        if ( mouse_y == 1 && (*iter)->isEnabled() && (*iter)->isSelected() )
         {
-          if ( (*iter)->isEnabled() && (*iter)->isSelected() )
+          if ( mouse_x >= x1 && mouse_x < x2 )
           {
-            if ( mouse_x >= x1 && mouse_x < x2 )
+            // Mouse pointer over item
+            if ( (*iter)->hasMenu() )
             {
-              // Mouse pointer over item
-              if ( (*iter)->hasMenu() )
+              FMenu* menu = (*iter)->getMenu();
+
+              if ( ! menu->hasSelectedItem() )
               {
-                FMenu* menu = (*iter)->getMenu();
+                FMenuItem* first_item;
+                menu->selectFirstItem();
+                first_item = menu->getSelectedItem();
 
-                if ( ! menu->hasSelectedItem() )
-                {
-                  FMenuItem* first_item;
-                  menu->selectFirstItem();
-                  first_item = menu->getSelectedItem();
+                if ( first_item )
+                  first_item->setFocus();
 
-                  if ( first_item )
-                    first_item->setFocus();
+                if ( getStatusBar() )
+                  getStatusBar()->drawMessage();
 
-                  menu->redraw();
-
-                  if ( getStatusBar() )
-                    getStatusBar()->drawMessage();
-
-                  redraw();
-                  drop_down = true;
-                }
-              }
-              else
-              {
-                (*iter)->unsetSelected();
-
-                if ( getSelectedItem() == *iter )
-                {
-                  setSelectedItem(0);
-                  leaveMenuBar();
-                  drop_down = false;
-                  (*iter)->processClicked();
-                  return;
-                }
+                redraw();
+                menu->redraw();
+                drop_down = true;
               }
             }
             else
@@ -304,10 +287,23 @@ void FMenuBar::onMouseUp (FMouseEvent* ev)
               (*iter)->unsetSelected();
 
               if ( getSelectedItem() == *iter )
+              {
                 setSelectedItem(0);
-
-              redraw();
+                leaveMenuBar();
+                drop_down = false;
+                (*iter)->processClicked();
+                return;
+              }
             }
+          }
+          else
+          {
+            (*iter)->unsetSelected();
+
+            if ( getSelectedItem() == *iter )
+              setSelectedItem(0);
+
+            redraw();
           }
         }
 
