@@ -19,7 +19,7 @@ int main (int, char**)
   if ( isatty(1) && ! std::strcmp(nl_langinfo(CODESET), "ANSI_X3.4-1968") )
   {
     // locale C -> switch from 7bit ascii -> latin1
-    std::setlocale(LC_ALL, "en_US");
+    std::setlocale(LC_ALL, "C");
   }
 
   printf ("   Codeset: %s\n", nl_langinfo(CODESET));
